--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "1.0.0",
-  "description": "AB-3 docs",
+  "description": "Match Estate docs",
   "scripts": {
     "init": "markbind init",
     "build": "markbind build",
@@ -9,6 +9,6 @@
     "deploy": "markbind deploy"
   },
   "devDependencies": {
-    "markbind-cli": "^5.1.0"
+    "markbind-cli": "^5.5.3"
   }
 }
