Rename addressbook storage items to matchestate

--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 }
 
 shadowJar {
-    archiveFileName = 'addressbook.jar'
+    archiveFileName = 'matchestate.jar'
 }
 
 defaultTasks 'clean', 'test'
